Development
	Bump QuickTime emulated version to 7.6.9
1.0.0
	Fix problem with javascript seek function where value was coming in as an int where unexpected
	Change libxul 2.0 check from 2.0b5 to just 2.0
	Fix incorrect variable
	Apply patch from Onur Kucuk to allow gecko-mediaplayer to compile against 
		xulrunner 2.0beta5 and higher
	Fully qualify streaming URLs loaded from the embed tag
	Obtain the plugin caller page and use that to resolve streaming urls
	Fix problem where first item on list is not playable
	Support qtsrcdontusebrowser option
	Updated Spanish translation
	Add WEBM types to plugin
	Handle nocache=1 better
	Mark asx files with ENTRY in them as non-playable
	Allow separate cache sizes for audio or video data, depends on mimetype identification
	Protect against NULL console
	Added German translation
	Move "stream" test to streaming function, change from int to boolean
	If url has "stream" in it, mark the url as streaming
	Give each item in the RAM playlist a unique id
0.9.9.2
	Detect and use NS_GetServiceManager dynamically
	Keep requested flag consistent
	Work better with .m3u playlists
	Reorder configure.in checks
	Fix Apple HD Gallery site (target = QuickTime issue)
	Add --enable-new-libxul when using --with-xulrunner-sdk
	User proper NPERR and NPRES codes in the URLNotify and DestroyStream
0.9.9
	Minor changes to the preference setting code
	Start preparing for 0.9.9 release
	Revert website change from movies to www at apple.com
	Fix javascript calls PlayAt, Get/SetAutoPlay
	Bump QuickTime emulation to 7.6.4
	Fix new apple HD trailers, where trailers is downloaded from the menu
	Use correct controlid with launching some apple.com HD videos
	For apple.com videos change movies.apple.com to www.apple.com
	Fix compile with libxul 1.9.2 and higher
	Fix crash on http://itunes.apple.com/us/album/endangered-species-live-at-abbey/id309810246
	Support the qtnext parameter
	Rework code to work better with xulrunner 1.9.2