@@ -1,4 +1,5 @@
 Development
+	Get width and height from the style attribute if present
 	Bump QuickTime emulated version to 7.6.9
 1.0.0
 	Fix problem with javascript seek function where value was coming in as an int where unexpected
